Updating README to reflect changes to support more mobile devices

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ h1. Letter Cards
 
 h2. Overview
 
-Letter Cards is a simple offline mobile iPhone web app that displays random letters.  
+Letter Cards is a simple offline mobile web app that displays random letters.  
 
 h2. LICENSE
 
